// Vitest Snapshot v1

exports[`GroupItem > should render as active when [active=true] 1`] = `
<Styled(styled.div)
  active={true}
  key="foo"
  onClick={[MockFunction spy]}
>
  foo
</Styled(styled.div)>
`;

exports[`GroupItem > should render correct with default props 1`] = `
<Styled(styled.div)
  active={false}
  key="foo"
  onClick={[MockFunction spy]}
>
  foo
</Styled(styled.div)>
`;
